feat(producer) : added product list wip
